--- a/A.html
+++ b/A.html
@@ -1,3 +1,35 @@
+<!doctype html>
+<html>
+<head>
+<title>WEB1=html</title>
+<meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2G9F8LP23Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2G9F8LP23Y');
+</script>
+</head>
+<body>
+  <h1><a href="index.html">WEB</a></h1>
+<ol>
+  <li><a href="1.html">HTML</a></li>
+  <li><a href="2.html">CSS</a></li>
+  <li><a href="3.html">JavaScript</a></li>
+  </ol>
+
+<h2> HTML</h2>
+
+<a href="https://www.w3.org/TR/html52/" target="_blank" title="html5 specification"> Hypertext Markup Language (HTML) </a>is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
+<br><br><br>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
+<img src="cooking picture.jpg" width="100%">
+<br>This is some text in a paragraph.
+This is some text in a paragraph.
+</body>
+</html>
 MUSIC VEDEO<br><br><br>
 
 <p>
@@ -22,4 +54,18 @@ MUSIC VEDEO<br><br><br>
     (d.head || d.body).appendChild(s);
     })();
 </script>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/610ccd32649e0a0a5ccfcca5/1fcd0340k';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
